[metadata]
name = ubersmith_client
url = https://github.com/internap/python-ubersmithclient
author = Internap
author-email = opensource@internap.com
summary = Another ubersmith lib
classifier =
    Development Status :: 7 - Inactive
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    deprecated_package

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
